# msr

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  ex1.py  ex2.py  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
benchmarks/: all_graphs_on_n_verts.py  export_pdf.py  generate.py  six_vert.py
doc/: CHANGELOG.md  MISC.md  TODO.md
examples/: ex1-sdp.ipynb  ex1.py  ex2-all-graphs-on-n-verts.ipynb  ex2-n6.ipynb  ex2.py
msr/: __init__.py  context_manager.py  draw_graph.py  graph.py  graph_lib.py  log_config.py  msr.py  msr_batch.py  msr_bounds.py  msr_lookup.py  msr_sdp.py  reduce.py  strategy_config.py  vert6.py
msr/graph/: __init__.py  convert.py  draw.py  embed.py  file_io.py  generate.py  graph.py  graph_lib.py  simple_undirected_graph.py
msr/graph/graph_lib/: __init__.py  generate.py  graph_lib.py
msr/graph/graph_lib/six_vert/: n6_1.json  n6_10.json  n6_100.json  n6_101.json  n6_102.json  n6_103.json  n6_104.json  n6_105.json  n6_106.json  n6_107.json  n6_108.json  n6_109.json  n6_11.json  n6_110.json  n6_111.json  n6_112.json  n6_12.json  n6_13.json  n6_14.json  n6_15.json  n6_16.json  n6_17.json  n6_18.json  n6_19.json  n6_2.json  n6_20.json  n6_21.json  n6_22.json  n6_23.json  n6_24.json  n6_25.json  n6_26.json  n6_27.json  n6_28.json  n6_29.json  n6_3.json  n6_30.json  n6_31.json  n6_32.json  n6_33.json  (+72 more)
msr/soln/: n6.json
tests/: test_graph.py  test_msr.py
tests/soln/: n4.json  n5.json  n6.json
