[tool.poetry]
name = "msr"
version = "0.5.2"
authors = ["Sam Reynolds <sreyn@proton.me>"]
description = "Tools to compute the minimum semidefinite rank of a simple undirected graph."
readme = "README.md"
license = "MIT"
packages = [{include = "msr"}]

[tool.poetry.dependencies]
python = "^3.11"
cvxpy = "^1.3"
matplotlib = "^3.7"
networkx = "^3.1"
numpy = "^1.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/samreynoldsmath/msr"
Issues = "https://github.com/samreynoldsmath/msr/issues"

[tool.black]
line-length = 80

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.pylint."messages control"]
max-line-length = 80
disable = [
  "fixme", # reenable to find TODO comments
  "invalid-name", # use good-names below
  "too-many-public-methods", # TODO
  "too-few-public-methods", # TODO
  "too-many-arguments", # TODO
  "too-many-locals", # TODO
  "too-many-branches", # TODO
  "too-many-statements", # TODO
  "too-many-return-statements", # TODO
  "too-many-instance-attributes", # TODO
  "missing-module-docstring", # TODO
  "missing-function-docstring", # TODO
  "missing-class-docstring", # TODO
  "pointless-string-statement", # TODO
]
good-names = []